--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@
   --color-cornflower: #e7e9fc;
   --color-cloud: #f4f4fd;
   --white-color: #ffffff;
+  --trns-main: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --trns-modal: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* reset styles */
 h1,
@@ -55,6 +57,7 @@ ul {
 .header-address {
   font-style: normal;
 }
+
 /* ------index.html------- */
 body {
   font-family: Roboto, "sans-serif";
@@ -71,6 +74,7 @@ body {
   padding: 0 15px;
   margin: 0 auto;
 }
+
 .header-container {
   display: flex;
   align-items: center;
@@ -89,6 +93,7 @@ body {
   gap: 40px;
   align-items: center;
 }
+
 .studio-logo {
   margin-right: 76px;
 
@@ -112,8 +117,21 @@ span.footer-logo-span {
   padding-bottom: 24px;
   line-height: calc(24 / 16);
   color: var(--primary-color);
+  transition: color var(--trns-main);
+  position: relative;
 }
+.header-link.current::after {
+  content: "";
+  position: absolute;
 
+  bottom: -1px;
+  left: 0;
+  display: block;
+  height: 4px;
+  width: 100%;
+  border-radius: 2px;
+  background-color: var(--color-ocean);
+}
 .header-link:hover,
 .header-link:focus,
 .address-link:hover,
@@ -125,6 +143,7 @@ span.footer-logo-span {
   font-weight: 400;
   line-height: calc(24 / 16);
   color: var(--primary-color);
+  transition: color var(--trns-main);
 }
 
 .hero-section {
@@ -175,6 +194,8 @@ span.footer-logo-span {
   cursor: pointer;
   font-family: inherit;
   font-weight: inherit;
+  transition: background-color var(--trns-main);
+  transform: scale(1);
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -314,6 +335,7 @@ span.footer-logo-span {
   border-radius: 50%;
   background-color: var(--accent-color);
   color: var(--color-cloud);
+  transition: background-color var(--trns-main);
 }
 .team-icon {
   fill: currentColor;
@@ -349,9 +371,11 @@ span.footer-logo-span {
   border: 1px solid #8e8f99;
   border-radius: 4px;
   color: #afb1b8;
+  transition: border var(--trns-main);
 }
 .customers-icon {
   fill: currentColor;
+  transition: fill var(--trns-main);
 }
 .customers-item-link:hover .customers-icon {
   fill: var(--color-ocean);
@@ -365,6 +389,77 @@ span.footer-logo-span {
 .customers-item-link:focus {
   outline: none;
   border: 1px solid var(--color-ocean);
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  perspective: 1300px;
+  transition: opacity var(--trns-modal);
+}
+.backdrop .modal {
+  transition: all 0.3s ease-in;
+  transform: translate(-50%, -50%);
+  opacity: 1;
+}
+.backdrop.is-hidden .modal {
+  transform: translateZ(700px) translateX(-120px) rotateX(50deg);
+  transform-style: preserve-3d;
+  opacity: 0;
+}
+
+.backdrop.is-hidden {
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 408px;
+  min-height: 576px;
+
+  background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 24px;
+  height: 24px;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+  padding: 0;
+  color: black;
+  transition: background-color var(--trns-main);
+}
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: var(--color-ocean);
+}
+.modal-btn-svg {
+  transition: fill var(--trns-main);
+  fill: currentColor;
+}
+.modal-btn:hover .modal-btn-svg {
+  fill: white;
 }
 
 /* ------portfolio.html------- */
@@ -390,6 +485,9 @@ span.footer-logo-span {
   font-weight: inherit;
   letter-spacing: 0.04em;
   border-radius: 4px;
+
+  transition: background-color var(--trns-main), box-shadow var(--trns-main),
+    color var(--trns-main);
 }
 .filters-item-btn:hover,
 .filters-item-btn:focus {
@@ -410,7 +508,49 @@ span.footer-logo-span {
 .examples-list-item {
   flex-basis: calc((100% - 48px) / 3);
 }
+.thumb {
+  position: relative;
+  overflow: hidden;
+}
+.examples-list-link:hover .overlay {
+  transform: translateY(0);
+  opacity: 1;
+}
+.examples-list-link:focus .overlay {
+  transform: translateY(0);
+  opacity: 1;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  transition: transform var(--trns-main);
+
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);
+}
+.examples-list-link:hover .thumb-text {
+  opacity: 1;
+}
+.examples-list-link:focus .thumb-text {
+  opacity: 1;
+}
+.thumb-text {
+  position: absolute;
+  top: 40px;
+  left: 32px;
+  padding-right: 32px;
+  text-align: left;
+  color: var(--color-cloud);
+  font-size: 16px;
+  line-height: calc(24 / 16);
+  font-weight: 400;
+  letter-spacing: 0.02em;
+}
 .examples-list-link {
+  text-decoration: none;
   display: block;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
@@ -420,6 +560,7 @@ span.footer-logo-span {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .examples-item-container {
+  z-index: 1;
   padding-top: 32px;
   padding-bottom: 32px;
   padding-left: 16px;
@@ -488,6 +629,7 @@ span.footer-logo-span {
   width: 40px;
   height: 40px;
   color: var(--color-cloud);
+  transition: background-color var(--trns-main);
 }
 .footer-icon {
   fill: currentColor;
