--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ p {
   text-decoration: none;
   color: currentColor;
 }
+button {
+  margin: 0;
+  padding: 0;
+}
 a {
   text-decoration: none;
 }
@@ -57,6 +61,24 @@ ul {
 .header-address {
   font-style: normal;
 }
+.btn {
+  margin: 0;
+  cursor: pointer;
+  display: block;
+  padding: 16px 32px;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  font-size: 16px;
+  line-height: calc(24 / 16);
+  letter-spacing: 0.04em;
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  cursor: pointer;
+  font-family: inherit;
+  font-weight: inherit;
+}
 
 /* ------index.html------- */
 body {
@@ -64,6 +86,7 @@ body {
   letter-spacing: 0.02em;
   font-weight: 500;
   margin: 0;
+  line-height: calc(24 / 16);
 }
 .section {
   padding-top: 120px;
@@ -183,20 +206,7 @@ span.footer-logo-span {
 }
 .hero-button {
   margin: 0 auto;
-  display: block;
-  padding: 16px 32px;
-  border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
 
-  font-size: 16px;
-  line-height: calc(24 / 16);
-  letter-spacing: 0.04em;
-  color: var(--white-color);
-  background-color: var(--accent-color);
-  cursor: pointer;
-  font-family: inherit;
-  font-weight: inherit;
   transition: background-color var(--trns-main);
   transform: scale(1);
 }
@@ -597,8 +607,10 @@ span.footer-logo-span {
 }
 .footer-container {
   display: flex;
-  gap: 120px;
   align-items: baseline;
+}
+.footer-left-side {
+  margin-right: 120px;
 }
 
 .footer-social-paragraph {
@@ -633,4 +645,45 @@ span.footer-logo-span {
 }
 .footer-icon {
   fill: currentColor;
+}
+.footer-form-container {
+  margin-left: auto;
+}
+.subscription-form {
+}
+.subscription-form__label {
+  display: block;
+  color: var(--white-color);
+  margin-bottom: 16px;
+}
+.subscription-form__flex-container {
+  display: flex;
+  gap: 24px;
+}
+.subscripition-form__input {
+  height: 40px;
+  width: 264px;
+
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding-left: 16px;
+  color: white;
+}
+.subscripition-form__button {
+  display: flex;
+  padding: 8px 24px;
+  align-items: center;
+  justify-content: center;
+}
+.subscripition-form__input:focus,
+.subscripition-form__input:focus-visible {
+  border: 1px solid white;
+  outline: none;
+}
+.subscripition-form__input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(24 / 12);
 }
